# 90sleep

./: .gitignore  README.md  local_build.sh  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/static/css/: styles.css
src/static/js/: calculator.js
src/templates/: base.html  index.html
